--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FastBuy</title>
+    <link rel="stylesheet" href="/css/cadastro.css">
 </head>
 <body>
     <h1>FastBuy</h1>
 
     <section class="container">
-        <form action="home.html">
+        <form action="/home.html">
             <label for="">Nome</label>
             <input type="text" name="" id="nome">
 
