--- a/pages/login.html
+++ b/pages/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/login.css">
+    <title>FastBuy</title>
 </head>
 <body>
     <h1>FastBuy</h1>
 
-    <form action="home.html">
+    <form action="/home.html">
         <h2>Login</h2>
         <label for="">E-mail</label>
         <input type="email" name="" id="email">
@@ -20,7 +20,7 @@
         <button type="submit">Logar</button>
 
         <h3>Ainda não possui cadastro?</h3>
-        <a href="pages/cadastro.html" target="_blank">Cadastre-se aqui</a>
+        <a href="/pages/cadastro.html">Cadastre-se aqui</a>
     </form>
      
 </body>
