--- a/home.html
+++ b/home.html
@@ -3,29 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FastBuy</title>
-    <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,600;1,6..96,600&family=Boldonse&family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+    </style>
+    <title>DevSuply</title>
 </head>
 <body>
     <header>
-        <h1>FastBuy</h1>
+        <h1>DevSuply</h1>
 
-        <section class="search-box">
-            <input type="text" placeholder="Pesquisar produtos...">
-            <button><i class="fa fa-search"></i></button>
+        <section>
+            <nav>
+                <a href="">Login</a>
+                <a href="">Cadastre-se</a>
+                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+            </nav>
         </section>
-        <nav>
-            <a href="#">Home</a>
-            <a href="pages/cadastro.html">Cadastre-se</a>
-            <a href="pages/login.html">Login</a>
-            <a href=""><i class="fa fa-shopping-cart"></i></a>
-        </nav>
+
     </header>
 
-    <body>
-        <img src="assets/img/banner.jpeg" alt="" id="banner">
-    </body>
-    
+    <section class="banner">
+        <section class="banner-left">
+            <h1>HORA DE SER</h1>
+            <p>SUA MELHOR VERSÃO</p>
+        </section>
+
+        <section class="banner-rigth">
+            <img src="img/Protein_for_ur_power__-removebg-preview.png" alt="">
+        </section>
+    </section>
+
+    <section class="menu">
+        <a href="">Promoçoes</a>
+        <a href="">Kits</a>
+        <a href="">Suplementos</a>
+        <a href="">Pré-Treino</a>
+        <a href="">Moda</a>
+
+    </section>
+    <main>
+
+    </main>
 </body>
 </html>
