--- a/home.html
+++ b/home.html
@@ -1,50 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/css/home.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="/css/home.css" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,600;1,6..96,600&family=Boldonse&family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,600;1,6..96,600&family=Boldonse&family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
     </style>
+
+    <script src="js/index.js" defer></script>
     <title>DevSuply</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>DevSuply</h1>
+      <h1>DevSuply</h1>
 
-        <section>
-            <nav>
-                <a href="">Login</a>
-                <a href="">Cadastre-se</a>
-                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
-            </nav>
-        </section>
-
+      <section>
+        <nav>
+          <a href="">Login</a>
+          <a onclick="mostrarCadastro()" href="">Cadastre-se</a>
+          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+        </nav>
+      </section>
     </header>
 
-    <section class="banner">
+    <main>
+      <section class="banner">
         <section class="banner-left">
-            <h1>HORA DE SER</h1>
-            <p>SUA MELHOR VERSÃO</p>
+          <h1>HORA DE SER</h1>
+          <p>SUA MELHOR VERSÃO</p>
         </section>
 
         <section class="banner-rigth">
-            <img src="img/Protein_for_ur_power__-removebg-preview.png" alt="">
+          <img src="img/Protein_for_ur_power__-removebg-preview.png" alt="" />
         </section>
-    </section>
+      </section>
 
-    <section class="menu">
+      <section class="menu">
         <a href="">Promoçoes</a>
         <a href="">Kits</a>
         <a href="">Suplementos</a>
         <a href="">Pré-Treino</a>
         <a href="">Moda</a>
+      </section>
 
-    </section>
-    <main>
+      <section class="prateleira">
+        <div class="produtos">
+          <img
+            src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
+            alt=""
+          />
+          <h1>Whey Protein</h1>
+          <p>R$ 120,99</p>
+          <a href="">Comprar</a>
+        </div>
 
+        <div class="produtos">
+          <img
+            src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition__1_-removebg-preview.png"
+            alt=""
+          />
+          <h1>Whey Protein</h1>
+          <p>R$ 120,99</p>
+          <a href="">Comprar</a>
+        </div>
+
+        <div class="produtos">
+          <img
+            src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition__1_-removebg-preview.png"
+            alt=""
+          />
+          <h1>Whey Protein</h1>
+          <p>R$ 120,99</p>
+          <a href="">Comprar</a>
+        </div>
+
+        <div class="produtos">
+          <img
+            src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
+            alt=""
+          />
+          <h1>Whey Protein</h1>
+          <p>R$ 120,99</p>
+          <a href="">Comprar</a>
+        </div>
+
+        <div class="produtos">
+            <img
+              src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
+              alt=""
+            />
+            <h1>Whey Protein</h1>
+            <p>R$ 120,99</p>
+            <a href="">Comprar</a>
+          </div>
+
+          <div class="produtos">
+            <img
+              src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
+              alt=""
+            />
+            <h1>Whey Protein</h1>
+            <p>R$ 120,99</p>
+            <a href="">Comprar</a>
+          </div>
+
+          <div class="produtos">
+            <img
+              src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
+              alt=""
+            />
+            <h1>Whey Protein</h1>
+            <p>R$ 120,99</p>
+            <a href="">Comprar</a>
+          </div>
+          
+      </section>
     </main>
-</body>
+    <footer>
+      <p>&copy;</p>
+    </footer>
+  </body>
 </html>
