--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <header>
       <h1>DevSuply</h1>
 
-      <section>
+      <section class="navMenu">
         <nav>
           <a href="">Login</a>
           <a onclick="mostrarCadastro()" href="">Cadastre-se</a>
@@ -27,9 +27,9 @@
         </nav>
       </section>
     </header>
-
     <main>
       <section class="banner">
+
         <section class="banner-left">
           <h1>HORA DE SER</h1>
           <p>SUA MELHOR VERSÃO</p>
@@ -38,7 +38,8 @@
         <section class="banner-rigth">
           <img src="img/Protein_for_ur_power__-removebg-preview.png" alt="" />
         </section>
-      </section>
+
+      </section> <!--banner-->
 
       <section class="menu">
         <a href="">Promoçoes</a>
@@ -46,7 +47,7 @@
         <a href="">Suplementos</a>
         <a href="">Pré-Treino</a>
         <a href="">Moda</a>
-      </section>
+      </section> <!--Menu-->
 
       <section class="prateleira">
         <div class="produtos">
@@ -90,39 +91,55 @@
         </div>
 
         <div class="produtos">
-            <img
-              src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
-              alt=""
-            />
-            <h1>Whey Protein</h1>
-            <p>R$ 120,99</p>
-            <a href="">Comprar</a>
-          </div>
+          <img
+            src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
+            alt=""
+          />
+          <h1>Whey Protein</h1>
+          <p>R$ 120,99</p>
+          <a href="">Comprar</a>
+        </div>
 
-          <div class="produtos">
-            <img
-              src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
-              alt=""
-            />
-            <h1>Whey Protein</h1>
-            <p>R$ 120,99</p>
-            <a href="">Comprar</a>
-          </div>
+        <div class="produtos">
+          <img
+            src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
+            alt=""
+          />
+          <h1>Whey Protein</h1>
+          <p>R$ 120,99</p>
+          <a href="">Comprar</a>
+        </div>
 
-          <div class="produtos">
-            <img
-              src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
-              alt=""
-            />
-            <h1>Whey Protein</h1>
-            <p>R$ 120,99</p>
-            <a href="">Comprar</a>
-          </div>
-          
-      </section>
+        <div class="produtos">
+          <img
+            src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
+            alt=""
+          />
+          <h1>Whey Protein</h1>
+          <p>R$ 120,99</p>
+          <a href="">Comprar</a>
+        </div>
+
+        <div class="produtos">
+          <img
+            src="img/Whey_Protein_100__Concentrado_Premium_900g_-_Xpro_Nutrition-removebg-preview.png"
+            alt=""
+          />
+          <h1>Whey Protein</h1>
+          <p>R$ 120,99</p>
+          <a href="">Comprar</a>
+        </div>
+      </section><!--Prateleira-->
+
+      <section class="banner2">
+        <section class="banner-left2">
+          <h1>HORA DE SER</h1>
+          <p>SUA MELHOR VERSÃO</p>
+        </section>
+      </section><!--Banner2-->
     </main>
     <footer>
-      <p>&copy;</p>
+      <p>&copy; Um site desenvolvido por Davi Pereira</p>
     </footer>
   </body>
 </html>
