--- a/home.html
+++ b/home.html
@@ -16,20 +16,35 @@
     <title>DevSuply</title>
   </head>
   <body>
+    <div id="fundoEscuro" class="fundo-escuro" onclick="fecharModal()"></div>
     <header>
       <h1>DevSuply</h1>
 
       <section class="navMenu">
         <nav>
-          <a href="">Login</a>
+          <a onclick="mostrarLogin()" href="">Login</a>
           <a onclick="mostrarCadastro()" href="">Cadastre-se</a>
           <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
         </nav>
       </section>
     </header>
+
+    <section id="formLogin" class="formulario-animado">
+      <h2>Login</h2>
+      <input type="email" placeholder="Email" /><br />
+      <input type="password" placeholder="Senha" /><br />
+      <button>Entrar</button>
+    </section>
+
+    <section id="formCadastro" class="formulario-animado">
+      <h2>Cadastro</h2>
+      <input type="text" placeholder="Nome completo" /><br />
+      <input type="email" placeholder="Email" /><br />
+      <input type="password" placeholder="Senha" /><br />
+      <button>Cadastrar</button>
+    </section>
     <main>
       <section class="banner">
-
         <section class="banner-left">
           <h1>HORA DE SER</h1>
           <p>SUA MELHOR VERSÃO</p>
@@ -38,8 +53,8 @@
         <section class="banner-rigth">
           <img src="img/Protein_for_ur_power__-removebg-preview.png" alt="" />
         </section>
-
-      </section> <!--banner-->
+      </section>
+      <!--banner-->
 
       <section class="menu">
         <a href="">Promoçoes</a>
@@ -47,7 +62,8 @@
         <a href="">Suplementos</a>
         <a href="">Pré-Treino</a>
         <a href="">Moda</a>
-      </section> <!--Menu-->
+      </section>
+      <!--Menu-->
 
       <section class="prateleira">
         <div class="produtos">
@@ -129,14 +145,16 @@
           <p>R$ 120,99</p>
           <a href="">Comprar</a>
         </div>
-      </section><!--Prateleira-->
+      </section>
+      <!--Prateleira-->
 
       <section class="banner2">
         <section class="banner-left2">
           <h1>HORA DE SER</h1>
           <p>SUA MELHOR VERSÃO</p>
         </section>
-      </section><!--Banner2-->
+      </section>
+      <!--Banner2-->
     </main>
     <footer>
       <p>&copy; Um site desenvolvido por Davi Pereira</p>
